# Langchain-agents

./: .gitignore
deep-research-assistant/: .env  .env.example  CHANGES.md  MCP_ARCHITECTURE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  STREAMABLE_HTTP_UPDATE.md  SUBQUERY_WORKFLOW_UPDATE.md  example.py  example_intelligent_urls.py  main.ipynb  mcp_server.py  pyproject.toml  requirements.txt  start_mcp_server.bat  start_servers.bat  test_implementation.py  test_mcp_connection.py  test_url_generator.py
deep-research-assistant/app/: __init__.py  agents.py  config.py  langgraph_agents.py  main.py  mcp.py  mcp_client.py  mcp_tools.py  schemas.py
deep-research-assistant/app/db/: database.py  models.py
deep-research-assistant/app/utils/: __init__.py  chunker.py  lang_detect.py  text_cleaner.py
deep-research-assistant/app/workers/: __init__.py  content_processor.py  embedding.py  langchain_vector_store.py  scraper_worker.py  vector_store.py
deep-research-assistant/tests/: test_end_to_end.py
